2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* doc/profile.sgml: Fixed typo in HAL support section.

2005-02-18  Bart Veer  <bartv@ecoscentric.com>

	* doc/profile.sgml, misc/gprof.gdb, host/gprof.gdb,
	  host/acinclude.m4, host/aclocal.m4, host/configure,
	  host/configure.in, host/Makefile.am, host/Makefile.in:
	  Move gprof.gdb to the host subdirectory, and autoconfiscate it.

2003-09-29  Bart Veer  <bartv@ecoscentric.com>

	* src/profile.c (profile_tftp_read_next): fix off-by-one error
	which lost the first mcount record.

	* doc/profile.sgml: fix typo

	* cdl/profile_gprof.cdl: clarify description of the tftp port

2003-09-26  Bart Veer  <bartv@ecoscentric.com>

	* cdl/profile_gprof.cdl, include/gmon.out.h, include/profile.h,
 	src/profile.c, misc/gprof.gdb, doc/gprof.sgml
	Major update, including adding call graph support.

2003-04-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/profile.c (profile_on): Clear profile before use. Reported
	by Suzuki, Ryouzaburou.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/profile_gprof.cdl: Add doc link.

2002-11-15  Gary Thomas  <gthomas@ecoscentric.com>

	* include/gmon_out.h: Import non-GPL version from OpenBSD.

	* doc/profile.sgml: Improve description of host/client and
	target/server roles.

	* src/profile.c: 
	* cdl/profile_gprof.cdl: Allow TFTP port number to be configured.

	* src/profile.c: 
	* include/profile.h: Add proper C++ protections.  Change timer
	callback function to be __profile_hit() - less polluting.

	* doc/profile.sgml: New file.

2002-11-14  Gary Thomas  <gthomas@ecoscentric.com>

	* src/profile.c: 
	* include/profile.h: 
	* include/gmon_out.h: 
	* cdl/profile.cdl: New package to support application profiling.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.